added Category model; added connection string and database migration; added a simple controller for category

--- a/BookStoreWeb/appsettings.json
+++ b/BookStoreWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-QQKLD1I;Database=BookStore;user id=sa;password=12345;Trusted_Connection=True"
+  }
 }
