--- a/BookStoreWeb/BookStoreWeb.csproj
+++ b/BookStoreWeb/BookStoreWeb.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\BookStore.Utility\BookStore.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
